--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="uno">
         <div class="caja-central">
             <div class="caja-cara">
-                <img class="cara" src="" >            
+                <img class="cara" src="https://img.freepik.com/vector-premium/hombres-traje-icono-simbolo-vector-ilustracion_77417-1867.jpg?w=2000">            
             </div>
             <div class="caja-presentacion">
                 <div>    
